tests/errors/isinstance_bad_type.ki
discard isinstance(5, 42)
